Fix history overflow

--- a/src/App.css
+++ b/src/App.css
@@ -285,3 +285,8 @@
     opacity: 0;
   }
 }
+
+.historyList {
+  max-height: calc(100vh - 330px);
+  overflow-y: auto;
+}
